Updated fingerprinter to fix bug 2819557. Updated JUnit tests to take into account new fingerprints. Also cleaned up the template extractor code and regenerated fingerprints for builder3d. Also updated the build file to properly include dependency jars for the makefp3d target
Signed-off-by: Egon Willighagen <egonw@users.sourceforge.net>